# orshot-python-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/orshot/: __init__.py  constants.py  orshot.py  types.py
